# rustwasm-fullstack-app

./: .gitignore  Cargo.toml  GEMINI.md  api.http  package-lock.json  package.json  temp_payload.json  wrangler.toml
.wrangler/tmp/bundle-IbGjtU/: middleware-loader.entry.ts
.wrangler/tmp/bundle-RJ8Z0y/: middleware-insertion-facade.js  middleware-loader.entry.ts
.wrangler/tmp/bundle-s8c3by/: middleware-loader.entry.ts
.wrangler/tmp/dev-6nm8ES/: pages-shim.js  pages-shim.js.map
.wrangler/tmp/dev-UKZzeR/: pages-shim.js  pages-shim.js.map
.wrangler/tmp/dev-sqjncs/: pages-shim.js  pages-shim.js.map
frontend/: wrangler.toml
frontend/public/: apitest.html  index.html  index1.html  indexstd.html  manual_check.html  test-worker.html
frontend/src/: apitest.css  apitest.js  main.js  style.css
src/: lib (1).rs  lib.rs
worker/: Cargo.toml  wrangler.toml
worker/src/: handlers.rs  healing.rs  lib(html).rs  lib.rs  lib.rs.bak  libhtml.rs  liborg.rs  libstd.rs  libtest.rs  models.rs  ng.rs  parsers.rs  selectorlib.rs  utils.rs
