[package]
name = "rustwasm-fullstack-app"
version = "0.1.0"
edition = "2021"
authors = [ "susumOyaji <sumitomo0210@gmail.com>" ]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.6.5"
worker-macros = "0.6.5"
console_error_panic_hook = { version = "0.1.1" ,optional = true}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] } # "serde" feature for chrono if you plan to serialize dates
scraper = "0.23.0" # ★これを追加！★
futures = "0.3"


[dependencies.web-sys]
version = "0.3"
features = [
    "console", # これが重要です！
]

[features]
default = ["console_error_panic_hook"]

[dev-dependencies]
wasm-bindgen-test = "0.3.42"